Create carousel on home page and fix css error

--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -1,10 +1,41 @@
 {%extends 'all-gallery/base.html'%}
 {% block content %}
 {{block.super}}
-<div class="container-fluid">
-
-    <div class="jumbotron" style="text-align: center; font-family: 'Monoton', cursive; background-color: black">
-        <h1 style="font-size: 80px; color: white">Konnichiwa </h1>
+<div class="slider">
+    <div class="slide">
+        <div class="content">
+            <h2>Tokyo</h2>
+            <p>Tokyo (東京, Tōkyō) is Japan's capital and the world's most populous metropolis. It is also one of Japan's 47 prefectures, consisting of 23 central city wards and multiple cities, towns and villages west of the city center. The Izu and Ogasawara Islands are also part of Tokyo.</p>
+        </div>
+        <img src="https://images.pexels.com/photos/417350/pexels-photo-417350.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"style="width:1400px;">
     </div>
-
+<div class="slide">
+    <div class="content">
+        <h2>Osaka</h2>
+        <p>Osaka is known as the “Nation's Kitchen,” and is well known for delicious foods such as takoyaki and okonomiyaki. The most famous food district in Osaka is Dotonbori.</p>
+    </div>
+    <img src="https://images.pexels.com/photos/2300342/pexels-photo-2300342.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"style="width:1400px;">
+</div>
+<div class="slide">
+    <div class="content">
+        <h2>Saitama</h2>
+        <p>Saitama is famous for sake, with around 35 breweries located throughout the prefecture.</p>
+    </div>
+    <img src="https://images.pexels.com/photos/115603/pexels-photo-115603.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"style="width:1400px;">
+</div>
+<div class="slide">
+    <div class="content">
+        <h2>Kyoto</h2>
+        <p> Kyoto is Japan in a nutshell. It's the cultural and historical heart of the country. It's the best place in all Japan to experience traditional temples, shrines, gardens, geisha, shops, restaurants and festivals.</p>
+    </div>
+    <img src="https://images.pexels.com/photos/161401/fushimi-inari-taisha-shrine-kyoto-japan-temple-161401.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"style="width:1400px;">
+</div>
+    <div class="slide">
+        <div class="content">
+            <h2>Yokohama</h2>
+            <p>Yokohama is famous for its abundant sightseeing spots. The Minatomirai area is an entertainment complex with shopping malls, an amusement park and movie theaters.</p>
+        </div>
+        <img src="https://images.pexels.com/photos/2085047/pexels-photo-2085047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"style="width:1400px;">
+    </div>
+</div>
 {% endblock %}
