--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -27,9 +27,14 @@
         <li class="active"><a href="{% url 'welcome' %}"style="font-size: 20px; font-weight: bold;">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#"style="font-size: 20px; font-weight: bold;">Admin</a></li>
         </ul>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+            <input type="text" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-default">Search</button>
+            </form>
         
         </div>
-        
         </div>
         </nav>
     </body>
