--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"style="font-size: 20px; font-weight: bold;">ギャラリー</a>
+        <a class="navbar-brand" href="{% url 'welcome' %}"style="font-size: 20px; font-weight: bold;">ギャラリー</a>
         </div>
         
         <!-- COLLAPSIBLE NAVBAR -->
@@ -25,13 +25,13 @@
         <!-- Links -->
         <ul class="nav navbar-nav">
         <li class="active"><a href="{% url 'welcome' %}"style="font-size: 20px; font-weight: bold;">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#"style="font-size: 20px; font-weight: bold;">Admin</a></li>
+        <li><a href="http://127.0.0.1:8000/admin/"style="font-size: 20px; font-weight: bold;">Admin</a></li>
         </ul>
-        <form class="navbar-form navbar-right" role="search">
+        <form class="navbar-form navbar-right" role="search" action="{% url 'search_results' %}">
             <div class="form-group">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" placeholder="Search" name="image" aria-label="search">
             </div>
-            <button type="submit" class="btn btn-default">Search</button>
+            <button  class="btn btn-default" type="submit">Search</button>
             </form>
         
         </div>
